simgps-landing-ver3/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Segoe UI;
}

html {
    scroll-behavior: smooth;
}

body {
    line-height: 1.6;
}

section {
    scroll-margin-top: 80px;
}

/* NAVBAR */
.navbar {
    position: fixed;
    top: 0;
    width: 100%;
    transition: all 0.4s ease;
    background: rgba(255, 255, 255, 0.9);
    backdrop-filter: blur(6px);
    color: #0f4c81;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 15px 20px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
    z-index: 9999;
}

.navbar .logo,
.navbar a {
    color: #0f4c81;
}

.navbar.scrolled {
    background: rgba(15, 76, 129, 0.95);
    backdrop-filter: blur(8px);
}

.navbar.scrolled .nav a {
    color: #333;
}

.navbar.scrolled a,
.navbar.scrolled .logo {
    color: white;
}

.nav {
    display: none;
    flex-direction: column;
    position: absolute;
    top: 60px;
    right: 0;
    background: white;
    width: 200px;

    opacity: 1 !important;
    transform: translateY(-20px);
    pointer-events: auto !important;

    transition: all 0.3s ease;
}
.nav.show {
    opacity: 1;
    transform: translateY(0);
    pointer-events: auto;
}

.logo {
    display: flex;
    align-items: center;
    gap: 10px;
    font-weight: 700;
    font-size: 20px;
    color: white;
}

.nav.show {
    display: flex;
    opacity: 1;
    transform: translateY(0);
    pointer-events: auto;
}

.nav a {
    padding: 15px;
    text-decoration: none;
    color: #333;
}

.menu-toggle {
    width: 25px;    
    height: 20px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    cursor: pointer;
    color: white;
}

.menu-toggle span {
    height: 3px;
    background: #333;
    border-radius: 3px;
    transition: 0.3s;
}

/* X-CLOSE ANIMATION */
.menu-toggle.active span:nth-child(1){
    transform: rotate(45deg) translate(5px, 5px);
}
.menu-toggle.active span:nth-child(2){
    opacity: 0;
}

.menu-toggle.active span:nth-child(3){
    transform: rotate(-45deg) translate(6px, -6px);
}

/* HERO */
.hero {
    height: 90vh;
    margin-top: 60px;
    position: relative;
    overflow: hidden;
}

.slide {
    position: absolute;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center;
    opacity: 0;
    transition: 1s;
}

.slide.active {
    opacity: 1;
}

/* BESARIN GAMBAR */
.slide:nth-child(1){
    background: url("https://images.unsplash.com/photo-1504813184591-01572f98c85f?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") center/cover;
}

.slide:nth-child(2){
    background: url(https://images.unsplash.com/photo-1579154204601-01588f351e67) center/cover;
}

.slide:nth-child(3){
    background:url(https://images.unsplash.com/photo-1584982751601-97dcc096659c) center/cover;
}

.hero-text {
    position: absolute;
    bottom: 50px;
    left: 20px;
    color: white;
    background: rgba(0, 0, 0, 0.4);
    padding: 20px;
    border-radius: 8px;
}

/* ABOUT */
.about-container {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.about h2,
.about p {
    margin-left: 5px;
}

.about img {
    width: 100%;
    height: 560px;
    border-radius: 5px;
}

@media(min-width:768px){
    .about-container {
        flex-direction: row;
        align-items: center;
    }

    .about img {
        width: 50%;
        height: 80vh;
    }

    .about-text {
        width: 50%;
    }
}

/* SERVICES */
.services {
    padding: 80px 20px;
    text-align: center;
    background: linear-gradient(rgba(15, 76, 129, 0.6), rgba(15, 76, 129, 0.6)), url("assets/card-bg.jpg");
    

    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    color: white;
}

.services h2 {
    text-align: center;
    margin-bottom: 30px;
}

.service-grid {
    display: grid;
    gap: 20px;
}

.card {
    background: rgba(255, 255, 255, 0.15);
    backdrop-filter: blur(12px);
    -webkit-backdrop-filter: blur(12px);

    border: 1px solid rgba(255, 255, 255, 0.3);
    border-radius: 15px;

    padding: 30px;
    text-align: center;

    color: white;

    transition: 0.3s;
}

.card img {
    width: 80px;
    margin-bottom: 10px;
}

.card:hover {
    transform: translateY(-8px);
    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
    background: rgba(255, 255, 255, 0.25);
}

.fade-up {
    opacity: 0;
    transform: translateY(40px);
    transition: all 0.8s ease;
}

.fade-up.show {
    opacity: 1;
    transform: translateY(0);
}

/* CLIENTS */
.clients {
    padding: 60px 20px;
    text-align: center;
    background: #f9f9f9;
    overflow: hidden;
}

.client-track {
    display: flex;
    gap: 50px;
    animation: scrollLogo 25s linear infinite;
    align-items: center;
}

.client-track img {
    margin-top: 20px;
    height: 60px;
    width: auto;
    object-fit: contain;
}

.client-track img:hover {
    filter: none;
    opacity: 1;
    transform: scale(1.1);
}

.logo-box {
    margin-top: 20px;
    min-width: 120px;
    height: 60px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: white;
    border-radius: 8px;
    font-size: 14px;
    font-weight: 600;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
}

@keyframes scrollLogo {
    0%{transform: translateX(0);}
    100%{transform: translateX(-50%);}
}

/* TESTIMONI */
.testimoni {
    padding: 80px 20px;
    text-align: center;
    background: #f9f9f9;
}

.testi-container {
    display: flex;
    gap: 20px;
    overflow: auto;
}

.testi {
    min-width: 250px;
    background: white;
    padding: 20px;
    border-radius: 10px;
}

/* GALLERY */
.gallery {
    padding: 80px 20px;
    text-align: center;
}

.gallery-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 15px;
    margin-top: 20px;
}

.popup {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.8);

    display: flex;
    justify-content: center;
    align-items: center;
}

.popup img {
    max-width: 80%;
    max-height: 80vh;
    object-fit: contain;
    border-radius: 10px;
    transform: scale(0.8);
    transition: 0.3s;

    .popup.show img {
        transform: scale(1);
    }
}

.gallery img {
    display: block;
    width: 100%;
    border-radius: 10px;
    transition: transform 0.4s ease, box-shadow 0.4s ease;
}

.gallery img:hover {
    transform:scale(1.08);
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
}

#topBtn {
    position: fixed;
    bottom: 90px;
    right: 20px;
    display: none;
    padding: 10px 15px;
    border: none;
    background: #0f4c81;
    color: white;
    border-radius: 5px;
}

.wa-float {
    position: fixed;
    bottom: 20px;
    right: 20px;

    width: 55px;
    height: 55px;

    display: flex;
    align-items: center;
    justify-content: center;

    background: #25D366;
    color: white;

    border-radius: 50%;
    font-size: 44px;
    
    z-index: 999;
}

/* KOLABORASI */
.cta {
    padding: 80px 20px;
    text-align: center;
    background: #0f4c81;
    color: white;
}

.btn {
    display: inline-block;
    margin-top: 20px;
    padding: 12px 25px;
    background: white;
    color: #0f4c81;
    border-radius: 5px;
}

/* CONTACT */
.contact {
    padding: 80px 20px;
    text-align: center;
}

/* FOOTER */
footer {
    text-align: center;
    padding: 20px;
    background: #0f4c81;
    color: white;
}

.footer-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
    padding: 40px 20px;
    background: #0f4c81;
    color: white;
}

.footer-links {
    display: flex;
    justify-content: center;
    gap: 80px;
    text-align: center;
}

.footer-links div {
    min-width: 150px;
}

.footer-links a {
    color: white;
    text-decoration: none;
    display: block;
    margin: 5px 0;
    transition: 0.3s;
}

.footer-links h4 {
    margin-bottom: 10px;
}

.footer-links a {
    display: block;
    margin-bottom: 5px;
    color: #fff;
    text-decoration: none;
}

.footer-links a:hover {
    opacity: 0.7;
}

/* SOCIAL */
.social {
    display: flex;
    gap: 20px;
    justify-content: center;
    align-items: center;
    gap: 20px;
    width: 100%;
}

.social a {
    color: #0f4c81;
    font-size: 20px;
    transition: 0.3s;
}

.social a:hover {
    transform:translateY(-3px);
    opacity: 0.7;
}

/* DESKTOP */
@media(min-width: 768px){

    .nav{
        display:flex !important;
        position:static;
        flex-direction:row;
        background: none;
        width: auto;
        opacity:1 !important;
        transform:none !important;
        pointer-events:auto !important;

}

    .nav a.scrolled {
        color: white;
        font-weight: 500;
        align-items: center;
    }

    .navbar.scrolled .nav a{
        color: white;
    }
    
    .menu-toggle {
        display: none;
    }

    .service-grid {
        grid-template-columns: repeat(3,1fr);
    }

    .hero-text {
        left: 60px;
    }

    .gallery-grid {
        grid-template-columns: repeat(4,1fr);
    }
}

